<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:id="@+id/main_banner"
        android:background="@color/secondaryLightColor"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="24dp"
        android:textAlignment="center"
        android:text="@string/texto_banner"
        app:layout_constraintStart_toStartOf="@id/main_banner"
        app:layout_constraintTop_toTopOf="@id/main_banner"
        app:layout_constraintBottom_toBottomOf="@id/main_banner"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/main_nota_1_edt"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nota_1"
        app:layout_constraintTop_toBottomOf="@id/main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/main_nota_2_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nota_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_nota_1_edt" />

    <EditText
        android:id="@+id/main_faltas_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/faltas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_nota_2_edt" />

    <Button
        android:id="@+id/main_calcular_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_limpar_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_limpar_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_faltas_edt"
        app:layout_constraintVertical_bias="0.298" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_limpar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_calcular_btn"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/main_resultado"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_limpar_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>